--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -12,5 +12,11 @@
         android:icon="@android:drawable/ic_menu_search"
         android:actionViewClass="android.widget.SearchView"
         android:showAsAction="always|collapseActionView"/>
+    
+    <item android:id="@+id/share"
+        android:orderInCategory="2"
+        android:showAsAction="ifRoom"
+        android:actionProviderClass="android.widget.ShareActionProvider"
+        />
 
 </menu>
