--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:onClick="popup"
+        android:text="popup menu"/>
 
 </RelativeLayout>
