--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,5 +12,11 @@
         android:layout_height="wrap_content"
         android:onClick="popup"
         android:text="popup menu"/>
-
+    
+    
+	<Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="popupup"
+        android:layout_alignParentBottom="true"
+        android:text="popup menu to up"/>
 </RelativeLayout>
